# biofetch

./: .gitignore  README.md  pyproject.toml  tests.py
biofetch/: __init__.py  cache.py  cli.py  display.py  ncbi.py  pdb.py  uniprot.py
